rns-lang/tests/snapshots/lexer-integers-huge_overflow.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.code 10000000000000000000000000000000000000000

----- STDOUT -----

----- STDERR -----
Error: invalid integer
   ╭─[ test_data/integration/lexer/integers/huge_overflow.ja:1:7 ]
   │
 1 │ .code 10000000000000000000000000000000000000000
   │       ────────────────────┬────────────────────  
   │                           ╰────────────────────── '10000000000000000000000000000000000000000' is not a valid integer
   │ 
   │ Note: Integers must be between -2147483648 and 2147483647
───╯
