rns-lang/tests/snapshots/lexer-integers-overflow_negative.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.code -99999999999999999999

----- STDOUT -----

----- STDERR -----
Error: invalid integer
   ╭─[ test_data/integration/lexer/integers/overflow_negative.ja:1:7 ]
   │
 1 │ .code -99999999999999999999
   │       ──────────┬──────────  
   │                 ╰──────────── integer '-99999999999999999999' is too large for a 32-bit signed integer
   │ 
   │ Note: Integers must be between -2147483648 and 2147483647
───╯
