rns-lang/tests/snapshots/parser-class_directive-header-name-newline_as_class_name.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.class public
.super java/lang/Object

----- STDOUT -----

----- STDERR -----
Error: Expected class name but found newline
   ╭─[ test_data/integration/parser/class_directive/header/name/newline_as_class_name.ja:1:14 ]
   │
 1 │ .class public
   │              │ 
   │              ╰─ Found 'newline' instead of a class name. The .class directive requires a class name after optional access flags.
   │ 
   │ Note: Class name is missing after optional access flags.
───╯
