rns-lang/tests/snapshots/parser-class_directive-header-trailing_tokens-dot_end.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.class public HelloWorld .end method
.super java/lang/Object

----- STDOUT -----

----- STDERR -----
Error: unexpected directive after class name
   ╭─[ test_data/integration/parser/class_directive/header/trailing_tokens/dot_end.ja:1:26 ]
   │
 1 │ .class public HelloWorld .end method
   │                          ─────┬─────  
   │                               ╰─────── directive '.end' is not allowed here
   │ 
   │ Note: The '.end' directive must match a previous '.method', '.code', or '.class' directive. It cannot appear directly after the class name.
───╯
